# pizza-day-trace

./: .gitignore  METHODOLOGY.md  Makefile  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: test.yml
analysis/: codex-review-prompt.md  codex-review-v2-prompt.md  codex-review-v2.md  codex-review.md  codex-viz-review-prompt.md  codex-viz-review.md  prior-art.md
data/processed/: anchor-inputs.csv  anchor-summary.json  conventions-comparison.json  headline-summary.json  jercos-deposits.csv  jercos-summary.json  summary-fifo.json  summary-haircut.json  summary-poison.json  summary.json  utxo-tree-fifo.csv  utxo-tree-haircut.csv  utxo-tree-poison.csv
src/: explorer.py  run_analyze.py  run_anchor.py  run_conventions.py  run_jercos.py  run_trace.py  tracer.py
tests/: test_fifo.py  test_trace_invariants.py
